@@ -5,6 +5,7 @@
   - (kurtnoise) Remove "tools" sub directory from backupfiles_CheckedChanged() because we can have some backup files in the root folder and SearchOption.AllDirectories is used anyways.
   - (zathor) [Adaptive Muxer] resized window so that the buttons at the bottom are visible again. Bug #3090155
   - (zathor) [AutoEncode] added saving of the default mp4 device type to the "Configure AutoEncode defaults" in the settings
+  - (zathor) [MKV Muxer] added support for quotes in the stream names. Bug #3090689
 
 0.3.5.18
   - (zathor) [OneClick] fixed "and open next" checkbox which did not always open the file dialogue. Bug #3089165
